fix(css): show trumps info
Infobox for trumps were hidden behind the board.

--- a/style/game/play.css
+++ b/style/game/play.css
@@ -34,7 +34,6 @@
 }
 
 #trumps-container {
-    overflow-y: hidden;
     position: relative;
 }
 
